--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.6.7",
     "expo-font": "^11.10.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
