--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-voice/voice": "github:react-native-voice/voice",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
     "axios": "^1.6.7",
     "expo-font": "^11.10.3",
