--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@react-navigation/stack": "^6.3.28",
     "axios": "^1.6.7",
     "expo-font": "^11.10.3",
+    "gifted-charts-core": "^0.0.32",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-gifted-charts": "^1.4.7",
     "react-native-keychain": "^8.2.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
