--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gifted-charts-core": "^0.0.32",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-keychain": "^8.2.0",
